[gd_scene load_steps=4 format=3 uid="uid://dvsg3utbx4in2"]

[ext_resource type="Script" path="res://Scripts/order.gd" id="1_1pvuf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lvo2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7wxt"]
bg_color = Color(0.749628, 0.487124, 0.7844, 1)

[node name="Order" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1pvuf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 59.0
color = Color(0.762489, 0.811626, 0.616114, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 71.0
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 15)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_4lvo2")
theme_override_styles/fill = SubResource("StyleBoxFlat_u7wxt")
show_percentage = false

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
